[gd_scene load_steps=4 format=3 uid="uid://dssmk0m8xsvxf"]

[ext_resource type="Theme" uid="uid://dreboohjjcn2f" path="res://assets/themes/LoginPanelTheme.tres" id="1_j753d"]
[ext_resource type="Script" path="res://scenes/ui/game_menu/game_menu.gd" id="2_erqce"]
[ext_resource type="PackedScene" uid="uid://retyeadedkag" path="res://scenes/ui/buttons/mute_unmute_all_button.tscn" id="3_xy0qb"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_j753d")
script = ExtResource("2_erqce")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = -399.0
offset_right = 302.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.183
anchor_right = 0.5
anchor_bottom = 0.333
offset_left = -20.0
offset_top = -19.034
offset_right = 20.0
offset_bottom = 32.138
grow_horizontal = 2

[node name="OptionsMarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OptionsMenu" type="Button" parent="Panel/VBoxContainer/OptionsMarginContainer"]
layout_mode = 2
text = "Options"

[node name="ReportBugMarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ReportBugMenu" type="Button" parent="Panel/VBoxContainer/ReportBugMarginContainer"]
layout_mode = 2
text = "Report Bug"

[node name="UnstuckButtonMarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="UnstuckButton" type="Button" parent="Panel/VBoxContainer/UnstuckButtonMarginContainer"]
layout_mode = 2
text = "I'm Stuck Help!
"

[node name="QuitButtonMarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/QuitButtonMarginContainer"]
layout_mode = 2
text = "Quit Game
"

[node name="HBoxContainer" type="AspectRatioContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_right = 64.0
grow_vertical = 0

[node name="MuteUnmuteAllButton" parent="Panel/HBoxContainer" instance=ExtResource("3_xy0qb")]
layout_mode = 2
